--- a/app/assets/styles/modules/_section-title.css
+++ b/app/assets/styles/modules/_section-title.css
@@ -18,10 +18,16 @@
         margin-bottom: .6rem;
 
         @mixin atSmall {
+            position: relative;
+            top: 8px;
             margin-left: .5rem;
             margin-right: 0;
             margin-bottom: 0;
             display: inline-block;
         }
+    }
+
+    &--blue {
+        color: $mainBlue;
     }
 }
